# sonos_discovery

./: .gitignore  .gitjournal.toml  Cargo.toml  LICENSE  README.md  _git-journal  changelog.md  git-journal.bash-completion
.circleci/: config.yml
src/: lib.rs  main.rs
