[package]
name = "sonos_discovery"
version = "0.0.1"
authors = ["Chabare <chabare95@gmail.com>"]
description = "Discover sonos devices via ssdp (UPnP discovery)"
repository = "https://github.com/Chabare/sonos_discovery"
license = "MIT License"
categories = ["sonos"]

[dependencies]
socket = "0.0.7"
