[package]
name = "sonos_discovery"
version = "0.0.2"
authors = ["Chabare <chabare95@gmail.com>"]
description = "Discover sonos devices via ssdp (UPnP discovery)"
repository = "https://github.com/Chabare/sonos_discovery"
license = "MIT"
categories = ["sonos"]

[lib]
name = "sonos_discovery"
path = "src/lib.rs"

[[bin]]
name = "sonos_discovery"
path = "src/main.rs"
doc = false

[dependencies]
socket = { version = "0.0.7", git = "https://github.com/teisenbe/rust-socket", branch = "remove_dependency" }
